# AgentGuard_NamoFans

./: .dockerignore  .env.example  .gitignore  =5.3.0  AgentGuard_NamoFans_IITKharagpur_Track5.md  CLAUDE.md  DEMO.md  Dockerfile  Excercise- Azure AI Content Safety (1).docx  Implementation.md  MASTER_PLAN.txt  PPT.md  README.md  agentguard_vulnerable.yaml  docker-compose.jaeger.yml  extra_feature (1).md  latex.txt  pi_detector.py  presentation_template.md  pyproject.toml  writeup.md
docs/: Azure Best Practices.docx  Azure For Students Signup Guide.docx  SOP (Azure VM).docx  SOP-Resource-Group.docx  TEAM_BRIEFING.md  benchmarks.md  integration_guide.md  supporting_artifacts.md
docs/reference_materials/: Budget-Action-Group-SOP.docx  Exercise-01.docx  Exercise-02.docx
notebooks/: llm_as_a_judge_eval.ipynb
readme_l4/: PLAN.md
readme_l4/AD-AGENT-main/: .gitignore  LICENSE  README.md  benchmark_workflow.py  main.py  requirements.txt
readme_l4/AD-AGENT-main/agents/: agent_code_generator.py  agent_evaluator.py  agent_info_miner.py  agent_optimizer.py  agent_processor.py  agent_reviewer.py  agent_selector.py
readme_l4/AD-AGENT-main/config/: config.py
readme_l4/AD-AGENT-main/data_loader/: data_loader.py
readme_l4/AD-AGENT-main/docs/: darts_models_page.txt  index.html  pygod_models_page.txt  pyod_models_page.txt  site.css  site.js
readme_l4/AD-AGENT-main/entity/: code_quality.py
readme_l4/AD-AGENT-main/utils/: openai_client.py
resources-AI-Governance/resources-AI-Governance/: Security_Governance_Responsible_AI-Final.pptx
src/: agentguard-docker.yaml  agentguard.yaml
src/agentguard/: __init__.py  audit_log.py  cli.py  config.py  decorators.py  default_config.py  exceptions.py  guardian.py  l4_behavioral.py  l4_rbac.py  models.py  owasp_scanner.py  parallel.py  promptfoo_bridge.py  telemetry.py
src/agentguard/_pipeline/: __init__.py  handlers.py  notifier.py  wave_runner.py
src/agentguard/config/: ioa_patterns.yaml  l4_policies.yaml
src/agentguard/dashboard/: agent_registry.py  demo_router.py  server.py
src/agentguard/l1_input/: __init__.py  blocklist_manager.py  content_filters.py  fast_injection_detect.py  prompt_shields.py
src/agentguard/l2_output/: __init__.py  groundedness_detector.py  output_toxicity.py  pii_detector.py
src/agentguard/l4/: __init__.py  behavioral.py  orchestrator.py  policy_engine.py  rbac.py
src/agentguard/observability/: __init__.py  audit.py  telemetry.py
src/agentguard/sandbox/: __init__.py  executor.py  landlock.py  network_guard.py  policies.py  resource_limits.py  seccomp_guard.py
src/agentguard/testing/: __init__.py  owasp_scanner.py  promptfoo_bridge.py
src/agentguard/tool_firewall/: __init__.py  approval_workflow.py  melon_detector.py  rule_evaluator.py  tool_input_analyzer.py  tool_specific_guards.py
src/examples/: demo_agentguard.py  demo_owasp_scan.py
src/tests/: test_audit_log.py  test_cli.py  test_config.py  test_decorators.py  test_decorators_groundedness.py  test_guard_agent.py  test_guardian.py  test_guardian_groundedness.py  test_guardian_parallel.py  test_owasp_scanner.py  test_parallel_execution.py  test_promptfoo_bridge.py  test_telemetry.py
src/tests/l1_input/: __init__.py  (+4 more)
test_bots/: _temp_approval_test.yaml  agentguard_itops.yaml  agentguard_sandbox.yaml  agentguard_vulnerable.yaml  basic_agent.py  compare_features.py  compare_latency.py  compare_vulnerable_agents.py  financial_agent.py  guarded_agent.py  guarded_financial_agent.py  guarded_hr_agent.py  guarded_it_ops_agent.py  guarded_medical_agent.py  guarded_sandbox_agent.py  guarded_vulnerable_agent.py  hr_agent.py  it_ops_agent.py  medical_agent.py  sandbox_agent.py  test_approval_workflow_e2e.py  vulnerable_agent.py
tests/: test_guardian_audit.py  test_guardian_pipeline.py  test_l4.py  test_observability.py  test_package_meta.py  test_public_api.py  test_testing_subpkg.py
tests/dashboard/: test_demo_router.py  test_server.py
tests/test_l4/: test_behavioral_baseline.py  test_drift_monitor.py  test_e2e_attack_scenarios.py  test_exhaustive.py  test_l4_guardian.py  test_legacy.py  test_orchestrator.py  test_policy_engine.py  test_session_graph.py  test_telemetry_span.py
(+22 files in other folders)
