[project]
name = "agentguard"
version = "0.1.0"
description = "Multi-Agent Security & Governance Platform for Enterprise AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[azure]>=0.4.0",
    "guardrails-ai>=0.5.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-ai-textanalytics>=5.3.0",
    "azure-identity>=1.16.0",
    "azure-ai-textanalytics>=5.3.0",
    "python-dotenv>=1.0.0",
    "deepteam>=1.0.6",
    "litellm>=1.40.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
agentguard = "agentguard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
